litmask/tests/compile/mask_format_missing_arg.stderr
error: mask_format! missing-arg: requires a string literal template at the call site; use `mask!` to decrypt a runtime string
 --> tests/compile/mask_format_missing_arg.rs:6:13
  |
6 |     let _ = mask_format!();
  |             ^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mask_format` (in Nightly builds, run with -Z macro-backtrace for more info)
